Projeto para portfólio (tela de login e area de cadastro de exames) -> criando estrutura html

--- a/index.html
+++ b/index.html
@@ -13,13 +13,26 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <main class="main-login">
-    <article class="content">
-
-    </article>
-    <article class="login">
-      
-    </article>
-  </main>
+  <header id="header">
+    <div id="content">
+      <h2>Laboratório de exames</h2>
+      <p class="about">
+        seus exames esta aqui!
+      </p>
+    </div>
+    <div id="login">
+      <form>
+        <div class="form-group">
+          <label for="name">Nome</label>
+          <input type="text" name="name" placeholder="Digite seu nome">
+        </div>
+        <div class="form-group">
+          <label for="senha">Senha</label>
+          <input type="password" name="password" placeholder="Digite sua senha">
+        </div>
+        <input type="submit" value="entrar" class="btn">
+      </form>
+    </div>
+  </header>
 </body>
 </html>
