Projeto para portfólio (tela de login e area de cadastro de exames) -> estiliando container

--- a/index.html
+++ b/index.html
@@ -13,26 +13,18 @@
   <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;700&display=swap" rel="stylesheet">
 </head>
 <body>
-  <header id="header">
-    <div id="content">
-      <h2>Laboratório de exames</h2>
-      <p class="about">
-        seus exames esta aqui!
-      </p>
+  <div class="container">
+    <div class="content">
+      <h2 class="title">Laboratório de exames</h2>
+      <p class="desc">Faça seus exames aqui!</p>
     </div>
-    <div id="login">
-      <form>
-        <div class="form-group">
-          <label for="name">Nome</label>
-          <input type="text" name="name" placeholder="Digite seu nome">
-        </div>
-        <div class="form-group">
-          <label for="senha">Senha</label>
-          <input type="password" name="password" placeholder="Digite sua senha">
-        </div>
-        <input type="submit" value="entrar" class="btn">
+    <div class="login">
+      <form class="form">
+        <input type="text" name="name" placeholder="Nome">
+        <input type="password" name="password" placeholder="Senha">
+        <button class="btn">Entrar</button>
       </form>
     </div>
-  </header>
+  </div>
 </body>
 </html>
