Projeto para portfólio (tela de login e area de cadastro de exames) -> estiliando title e desc do content

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
   <div class="container">
     <div class="content">
-      <h2 class="title">Laboratório de exames</h2>
+      <h2 class="title">Laboratório <br>de exames</h2>
       <p class="desc">Faça seus exames aqui!</p>
     </div>
     <div class="login">
