Projeto para portfólio (tela de login e area de cadastro de exames) -> estiliando form de nome e senha

--- a/index.html
+++ b/index.html
@@ -20,8 +20,8 @@
     </div>
     <div class="login">
       <form class="form">
-        <input type="text" name="name" placeholder="Nome">
-        <input type="password" name="password" placeholder="Senha">
+        <input type="text" name="name" placeholder="Nome" id="name">
+        <input type="password" name="password" placeholder="Senha" id="password">
         <button class="btn">Entrar</button>
       </form>
     </div>
