Projeto para portfólio (tela de login e area de cadastro de exames) -> estiliando butão e crie sua conta esqueci minha senha

--- a/index.html
+++ b/index.html
@@ -23,6 +23,10 @@
         <input type="text" name="name" placeholder="Nome" id="name">
         <input type="password" name="password" placeholder="Senha" id="password">
         <button class="btn">Entrar</button>
+        <div class="desc-form">
+          <a href="#">crie sua conta aqui</a>
+          <a href="#">esqueci minha senha</a>
+        </div>
       </form>
     </div>
   </div>
